# redb-opfs

./: .editorconfig  .gitignore  Cargo.toml  Makefile  README.md  rust-toolchain.toml
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: deny.yml  rust.yml
examples/rust-in-web-worker/: Cargo.toml
examples/rust-in-web-worker/src/: index.html  lib.rs  main.ts  messages.ts  worker.ts
examples/web-worker/: README.md  package.json
examples/web-worker/src/: dlog.ts  index.html  index.ts  semaphore.ts  types.ts  worker.ts
src/: error.rs  file.rs  file_abstraction.rs  file_len.rs  lib.rs
