[package]
name = "redb-opfs"
version = "0.1.0"
edition = "2024"
description = "Implements a `StorageBackend` which delegates to OPFS"
license = "GPL-3.0-only"
repository = "https://github.com/wireapp/redb-opfs"

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
derive_more = { version = "2.0.1", features = ["display", "error", "from"] }
parking_lot = "0.12.4"
# Temporary! Should be next released version containing https://github.com/cberner/redb/pull/1084
redb = { git = "https://github.com/cberner/redb", branch = "master", version = "3.0" }
wasm-bindgen = "0.2.101"
wasm-bindgen-futures = "0.4.51"

[target.'cfg(target_family = "wasm")'.dependencies]
js-sys = "0.3.80"
web-sys = { version = "0.3.80", features = [
  "DedicatedWorkerGlobalScope",
  "DomException",
  "FileSystemDirectoryHandle",
  "FileSystemFileHandle",
  "FileSystemGetDirectoryOptions",
  "FileSystemGetFileOptions",
  "FileSystemReadWriteOptions",
  "FileSystemSyncAccessHandle",
  "StorageManager",
  "WorkerGlobalScope",
  "WorkerNavigator",
] }


[profile.release]
lto = true
